--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "clean": "rm -rf build",
     "build-examples": "npm run clean && webpack",
     "deploy-demos": "git checkout gh-pages && git merge master --no-edit && npm run build-examples && git add -A && git commit -m 'Update demos' && git push && git checkout master",
-    "build": "npm run clean",
+    "build": "npm run clean && babel --out-dir build lib",
     "dev": "npm start",
     "test": "testem",
     "start": "webpack-dev-server --hot",
@@ -18,14 +18,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/littlebits/react-popover.git"
+    "url": "https://github.com/dhassouni/react-popover.git"
   },
   "author": "Jason Kuhrt <jasonkuhrt@me.com> (http://jasonkuhrt.com/)",
-  "name": "react-popover",
-  "homepage": "https://github.com/littlebits/react-popover",
+  "name": "@dhassouni/react-popover",
+  "homepage": "https://github.com/dhassouni/react-popover",
   "version": "1.0.0",
   "main": "src/index.js",
-  "description": "A specification backed popover for react",
+  "description": "A specification backed popover for react - dhassouni fork",
   "devDependencies": {
     "babel-cli": "^6.3.15",
     "babel-core": "^6.3.15",
@@ -54,7 +54,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "bugs": {
-    "url": "https://github.com/littlebits/react-popover/issues"
+    "url": "https://github.com/dhassouni/react-popover/issues"
   },
   "eslintConfig": {
     "extends": [
