--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf build",
-    "build-examples": "npm run clean && webpack",
-    "deploy-demos": "git checkout gh-pages && git merge master --no-edit && npm run build-examples && git add -A && git commit -m 'Update demos' && git push && git checkout master",
-    "build": "npm run clean && babel --out-dir build lib",
-    "dev": "npm start",
-    "test": "testem",
-    "start": "webpack-dev-server --hot",
-    "prepublish": "npm run build",
-    "postversion": "git push && git push --tags && npm publish"
+    "test": "testem"
   },
   "dependencies": {
     "css-vendor": "^0.3.1",
